[project]
name = "mc_cascade_res"
description = "comfyui node for aspect ratio."
version = "1.0.2"
license = {text = "MIT License"}

[project.urls]
Repository = "https://github.com/tester4488/mc_cascade_res.git"
#  Used by Comfy Registry https://registry.comfy.org


[tool.comfy]
PublisherId = "pippo"
DisplayName = "mc_cascade_res"
Icon = ""
